<!--
  ~ Created by Stefan Sprenger
  -->

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:fadeScrollbars="false"
    android:background="#ffffff">


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text_detail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#029789"
        android:gravity="center"
        android:padding="18dip"
        android:text="@string/movie_title_textview_demo"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/image_view_detail_contentdesc"
            android:gravity="center"
            android:padding="20dip"
            android:textColor="#000000"
            android:adjustViewBounds="true"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/detail_release_date_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_release_date_textview_demo" />

            <TextView
                android:id="@+id/detail_rating_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_rating_textview_demo" />


            <ImageButton
                android:id="@+id/detail_favorite_button"
                android:layout_width="90dp"
                android:layout_height="73dp"
                android:background="@drawable/favorise_button_state"
                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/synopsis_text_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingLeft="6pt"
        android:paddingRight="6pt"
        android:paddingTop="5pt"
        android:paddingBottom="5pt"
        android:scrollbars="vertical"
        android:text="@string/synopsis_text_detail_demo"
        android:textColor="#737373"
        android:textSize="18sp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#bcb5b5" />

    <TextView
        android:id="@+id/textview_trailer_headlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:layout_gravity="center"
        android:text="@string/textview_trailer_headlines_text" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#bcb5b5" />

    <view
        android:id="@+id/recyclerview_trailers"
        class="android.support.v7.widget.RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:scrollbars="horizontal"
        android:fadeScrollbars="false"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#bcb5b5" />

    <TextView
        android:id="@+id/textview_review_headlines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:layout_gravity="center"
        android:text="@string/textview_review_headlines_text" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#bcb5b5" />

    <view
        android:id="@+id/recyclerview_reviews"
        class="android.support.v7.widget.RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dip" />


</LinearLayout>

</ScrollView>